--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
     <h2>Menu</h2>
     <ul style="list-style-type: none; padding: 0;">
         <li><div class="game" onclick="window.location.href='games/whack2/index.html'">Whack-a-Monkey</div></li>
-        <li><div class="game" onclick="window.location.href='games/snakegame/snake.html'">Snake Game</div></li>
-        <li><div class="game" onclick="window.location.href='games/pong/pong.html'">Pong</div></li>
-        <li><div class="game" onclick="window.location.href='games/basicplatformer/index.html'">Collect ALL the coins!</div></li>
-        <li><div class="game" onclick="window.location.href='games/topdowngame/index.html'">Collect ALL the coins! (and avoid danger)</div></li>
-        <li><div class="game" onclick="window.location.href='games/chooseyourcharacter/index.html'">Choose your character</div></li>
-        <li><div class="game" onclick="window.location.href='games/blindgame/index.html'">The number guessing game</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/snakegame/index.html'">Snake</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/pong/pong.html'">Pong</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/basicplatformer/'">Collect ALL the coins!</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/topdowngame/'">Collect ALL the coins! (and avoid danger)</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/chooseyourcharacter/'">Choose your character</div></li>
+        <li><div class="game" onclick="window.location.href='https://christianaboesch.github.io/thenumberguessinggame/'">The number guessing game</div></li>
     </ul>
 
     <script>
